# quant-trading

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
config/: settings.yaml
core/: __init__.py  backtest_engine.py  batch_backtest_engine.py  commission_scheme.py  data_manager.py  strategy_comparator.py
data/: __init__.py  data_feed.py
docs/: MULTI_STRATEGY_COMPARISON.md  SCREENER_GUIDE.md  TEST_REPORT.md
reports/: batch_DualMovingAverage_stats_20260109_152106.txt  final_strategy_comparison.md
screeners/: __init__.py  base_screener.py  composite_screener.py  factor_screener.py  screener_manager.py  technical_screener.py
screeners/custom/: __init__.py  my_screener.py
scripts/: compare_strategies.py  evaluate_goldwind.py  run_backtest.py  run_batch_backtest.py  run_screener.py  test_oscillation_strategy.py  test_ultra_aggressive.py
strategies/: __init__.py  base_strategy.py  ma_strategy.py  macd_strategy.py  oscillation_strategy.py
utils/: __init__.py  config.py  logger.py
